# tonic-playground

./: Cargo.toml  build.rs
proto/: service.proto
src/: lib.rs
src/proto/: mod.rs  tonic_playground.rs
