[package]
name = "tonic-playground"
version = "0.1.0"
authors = ["Sam Schlegel <git@lutin.us>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
prost = "0.6"
prost-types = "0.6"
tower = "0.3"
tonic = "0.1"
futures = "0.3"

[build-dependencies]
prost-build = "0.6"
